WISH: double-click: more intelligent (urls etc.)
WISH: OnTheSpot editing, or maybe switch to miiiiiiif
WISH: tabbed windows (hey, just use screen...)
WISH: just for fun, do shade and tint with XRender.

5.5
	- re-enabled modifer state matching as in 5.3, but implement
          a new builtin: keysym style that simply reverts to the built-in
          meaning of the given key.

5.4  Mon Apr 18 00:33:31 CEST 2005
	- match modifier state exactly in custom keyboard code.
          this is necessary because it has no knowledge about
          built-in mappings and so will overwrite them. the priority-code
          will be re-enabled when this has changed, so watch out.
	- cursor blinking now depends on frills.
        - underline cursor mode (frills, -uc).
	- implement special value (*g*) for pointerBlankDelay
          to disble it.

5.3  Sun Mar 13 00:20:44 CET 2005
	- fix a bug that allowed to overflow a buffer via a long
          escape sequence, which is probably exploitable (fix by
          Rob Holland / Yoann Vandoorselaere / Gentoo Audit Team).
        - Custom key mappings no longer confuse mouse buttons
          with modifiers.
	- use XmbSetWMProperties instead of XSetWMProperties.
	- properly update WM_LOCALE.
        - implement _NET_WM_PING protocol.
        - implemented escape sequences to move the scrollback buffer view
          and clear the scrollback buffer.

5.2  Sun Feb 20 01:48:59 CET 2005
	- new option -pty-fd that makes the terminal a slave
          that uses an existing pty for I/O instead of starting
          a command.
        - implement enough of XEMBED to allow for correct focus.
        - added doc/embed-tk, an embedding example in Perl/Tk,
          and doc/rxvt-tabbed, a primitive tabbed shell implemented
          in Perl/Gtk2.
        - fix assertion failure ("crash") on mousewheel-scrolling
          when the terminal height is small, by removing the assert.
          (reported by Mikael Magnusson).